--- a/DatingApp/DatingApp/UI/client/src/app/app.component.html
+++ b/DatingApp/DatingApp/UI/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{title}}</h1>
 
-<ul>
-    <li id="listItem" *ngFor='let user of users'>{{user.id}} - {{user.userName}}</li>
+<ul id="listOfUsers">
+    <li *ngFor='let user of users'>{{user.id}} - {{user.userName}}</li>
 </ul>
