--- a/DatingApp/DatingApp/UI/client/src/app/errors/test-errors/test-errors.component.html
+++ b/DatingApp/DatingApp/UI/client/src/app/errors/test-errors/test-errors.component.html
@@ -34,4 +34,11 @@
   >
     Test 400 Validation Error
   </button>
+  <div class="row mt-5" *ngIf="validationError.length > 0">
+    <ul class="text-danger">
+      <li *ngFor="let error of validationError">
+        {{ error }}
+      </li>
+    </ul>
+  </div>
 </ng-container>
